# very

./: .gitignore  Cargo.toml  README.md
sv-language-server/: Cargo.toml
sv-language-server/src/: lib.rs  main.rs
sv-language-server/tests/: completion_tests.rs  document_highlight_tests.rs  document_symbol_tests.rs  folding_range_tests.rs  hover_tests.rs  workspace_symbol_tests.rs
sv-language-server/tests/common/: mod.rs
sv-parser/: Cargo.toml  test_module.sv
sv-parser/src/: cli.rs  lib.rs  parser.rs  preprocessor.rs  semantic.rs
sv-parser/test_files/: 20.13--changing_gclk.sv  20.13--stable_gclk.sv  20.13--steady_gclk.sv  basic_union.sv  binary_op_arith_shl.sv  binary_op_arith_shr.sv  binary_op_bit_xnor.sv  binary_op_log_shl.sv  binary_op_log_shr.sv  binary_op_mod.sv  global_clocking_with_end_label.sv  global_clocking_with_identifier.sv  global_clocking_without_identifier.sv  sampled_fell.sv  sampled_past.sv  sampled_rose.sv  sampled_stable.sv
sv-parser/test_files/assignments/: add_assign.sv  and_assign.sv  ashl_assign.sv  ashr_assign.sv  cont_assignment_delay.sv  cont_assignment_net_delay.sv  div_assign.sv  mod_assign.sv  mul_assign.sv  or_assign.sv  shl_assign.sv  shr_assign.sv  sub_assign.sv  xor_assign.sv
sv-parser/test_files/classes/: class_in_module.sv  class_with_extends.sv  class_with_local.sv  class_with_member_access.sv  class_with_protected.sv  encapsulation_inherited_prot_from_inside.sv  encapsulation_local_from_inside.sv  encapsulation_prot_from_inside.sv  simple_class.sv
sv-parser/test_files/drive_strengths/: 10.3.4--assignment_pull1_pull0.sv  10.3.4--assignment_strong1_highz0.sv  10.3.4--assignment_weak1_weak0.sv
sv-parser/test_files/errors/: incomplete_module.sv  invalid_syntax.sv
sv-parser/test_files/expressions/: binary_add.sv  module_with_assignment.sv  numbers.sv  parentheses.sv  systemverilog_number_with_z.sv
sv-parser/test_files/modules/: empty_module.sv  module_no_direction_ports.sv  module_with_array_ports.sv  module_with_port_declaration.sv  module_with_ports.sv  multiple_modules.sv  whitespace_handling.sv
sv-parser/test_files/operators/: case_equal.sv  case_not_equal.sv  comparison_operators.sv  equality.sv  logical_and.sv  logical_equivalence.sv  logical_implication.sv  logical_not.sv  logical_or.sv  not_equal.sv  reduction_and.sv  reduction_nand.sv  reduction_nor.sv  reduction_or.sv  reduction_xnor.sv  reduction_xor.sv  unary_minus.sv  unary_not.sv  unary_plus.sv  wildcard_equal.sv  wildcard_not_equal.sv
sv-parser/test_files/preprocessor/: header.sv  include_directive.sv  simple_define.sv
sv-parser/test_files/variables/: bit_signed.sv  (+28 more)
sv-parser/tests/: assignment_tests.rs  class_tests.rs  cli_tests.rs  drive_strength_tests.rs  error_tests.rs  expression_tests.rs  fail_fast_tests.rs  file_based_tests.rs  global_clocking_tests.rs  integration_tests.rs  module_tests.rs  operator_tests.rs  preprocessor_directive_tests.rs  preprocessor_tests.rs  procedural_block_tests.rs  semantic_tests.rs  span_tests.rs  system_task_tests.rs  union_struct_tests.rs  variable_declaration_tests.rs
(+39 files in other folders)
