[workspace]
members = [
    "sv-parser",
    "sv-language-server",
]
resolver = "2"

[workspace.dependencies]
# Parser dependencies
chumsky = "0.9"
anyhow = "1.0"

# Language server dependencies
tower-lsp = "0.20"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI dependencies
clap = { version = "4.0", features = ["derive"] }

# Development dependencies
tempfile = "3.0"