[workspace]
members = [
    "sv-parser",
    "sv-language-server",
]
resolver = "2"

[workspace.dependencies]
chumsky = "0.9"
anyhow = "1.0"
tower-lsp = "0.20"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
tempfile = "3.0"
