[package]
name = "sv-language-server"
version = "0.1.0"
edition = "2021"
description = "The front-end language server implementation for very -- a very nice SystemVerilog language server"

[lib]
name = "sv_language_server"
path = "src/lib.rs"

[[bin]]
name = "sv-language-server"
path = "src/main.rs"

[dependencies]
sv-parser = { path = "../sv-parser" }
tower-lsp = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = "0.8"
anyhow = { workspace = true }
