[package]
name = "sv-parser"
version = "0.1.0"
edition = "2021"
description = "The parser for very -- a very nice SystemVerilog language server"

[dependencies]
chumsky = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[[bin]]
name = "sv-parser"
path = "src/bin/sv_parser.rs"
